# agent-hand

./: .gitignore  ARCHITECTURE_AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FRONTEND_AUDIT.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  README.md  README.zh-CN.md  README.zh.md  SPEC_REQUIREMENTS_AUDIT.md  TODO.md  deploy-webhook-fix.sh  deploy.sh  install.ps1  install.sh  ralph-canvas-prompt.txt  setup-ssl.sh  test-viewer.sh  wait-and-ssl.sh
.claude/commands/: make-sound-pack.md
.clawhub/: lock.json
.github/workflows/: deploy-pages.yml  release.yml
.next/: trace  trace-build
assets/logo/: README.md
docs/: 404.html  GO_PREVIEW_REFACTOR_NOTES.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  account.html  account.txt  activate.html  activate.txt  compare.html  faq.html  index.html  index.txt  llms-full.txt  llms.txt  privacy.html  privacy.txt  refund.html  refund.txt  robots.txt  sitemap.xml  terms.html  terms.txt
docs/activate/: index.html  index.txt
docs/auth/: callback.html  callback.txt
docs/auth/callback/: index.html  index.txt
docs/css/: style.css
docs/en/: index.html  index.txt
docs/en/account/: index.html  index.txt
docs/en/activate/: index.html  index.txt
docs/ja/: index.html  index.txt
docs/js/: analytics.js  main.js
docs/zh/: index.html  index.txt
plugins/canvas-demo/: Cargo.toml
scripts/: preflight.sh  release.sh  test_coordination_pipeline.sh
scripts/claude/: hook_event_bridge.sh  install-claude-userprompt-hook.sh  log_user_prompt.sh
skills/3d-canvas/: SKILL.md  starter.html
skills/bridge-overview/: SKILL.md
skills/canvas-ops/: SKILL.md
skills/canvas-render/: SKILL.md
skills/session-manager/: SKILL.md
skills/settings-config/: SKILL.md
skills/workspace-ops/: SKILL.md
specs/: 01-collaboration-v2-scrollable-viewer.md  02-guest-fork-worktree-isolation.md  03-presence-cursor-tracking.md  04-canvas-relationship-graph.md  05-ecs-runtime-event-system.md  06-security-mechanism-evidence-confirmation.md  07-memory-relationship-system.md  08-guarded-context-orchestration.md  09-mvp-phase-a-brief.md  10-boundary-and-e2e-plan.md  11-feedback-packet-v1.md  12-hot-brain-runtime.md  13-hot-brain-execution-brief.md  14-transport-adapter-boundary.md  15-world-slice-v1.md  16-world-slice-execution-brief.md  17-candidate-consumers.md  18-candidate-consumers-execution-brief.md  19-memory-boundary.md  20-memory-boundary-execution-brief.md  21-scheduler-normalized-outputs.md  22-scheduler-normalized-outputs-execution-brief.md  23-canvas-workflow-views.md  24-integrated-technical-plan.md  25-implementation-roadmap.md  26-implementation-status-audit.md  27-second-round-development-brief.md  28-wasm-hot-brain-extension.md  29-wasm-hot-brain-execution-brief.md  30-resume-agent-framework-handoff.md  PHASE3_COMPLETE.md  PHASE3_TEST_GUIDE.md  SPEC-03-SUMMARY.md
src/: analytics.rs  auth.rs  config.rs  device.rs  i18n.rs  lib.rs  log_rotate.rs  main.rs  update.rs
src/agent/: analyzer.rs  analyzer_host.rs  consumers.rs  delivery.rs  guard.rs  hot_brain.rs  io.rs  memory.rs  mod.rs  projections.rs  runner.rs  scheduler.rs  wasm_canvas.rs  wasm_executor.rs  wasm_host.rs
src/ai/: mod.rs  summarize.rs
src/chat/: mod.rs  service.rs  types.rs
src/claude/: hooks.rs  mod.rs
src/cli/: args.rs  commands.rs  mod.rs
src/control/: mod.rs  socket.rs
src/error/: mod.rs
src/hooks/: event.rs  mod.rs  receiver.rs  socket.rs
src/mcp/: config.rs  manager.rs  mod.rs  pool.rs  pool_stub.rs
src/notification/: manager.rs  mod.rs  pack.rs  registry.rs  sound.rs
src/session/: context.rs  groups.rs  instance.rs  mod.rs  relationships.rs  storage.rs
src/sharing/: mod.rs  permissions.rs  state.rs  tmate.rs
src/skills/: github.rs  linker.rs  manager_skill.rs  mod.rs
src/tmux/: cache.rs  detector.rs  manager.rs  mod.rs  ptmx.rs  resume_adapter.rs  session.rs  session_id_scanner.rs
src/ui/: app.rs  dialogs.rs  events.rs  input.rs  mod.rs  render.rs  switcher.rs  transition.rs
src/ws/: mod.rs  server.rs
tests/: wasm_canvas_e2e.rs
tests/fixtures/: demo_canvas_plugin.wasm
wasm-guest-demo/: Cargo.toml
wasm-guest-demo/src/: lib.rs
wasm-sdk/: Cargo.toml
wasm-sdk/src/: lib.rs  types.rs
web/: inject-schema.py  inject-schema.sh  next.config.ts  package-lock.json  package.json  schema.json  tsconfig.json  tsconfig.tsbuildinfo
(+276 files in other folders)
