[package]
name = "agent-hand"
version = "0.2.3"
edition = "2021"
authors = ["Agent Hand Contributors"]
description = "Terminal session manager for AI coding agents"
license = "MIT"

[[bin]]
name = "agent-hand"
path = "src/main.rs"

[features]
default = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Fuzzy search
fuzzy-matcher = "0.3"

# File watching
notify = "6"

# HTTP for MCP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Unix socket
tokio-util = { version = "0.7", features = ["codec"] }

# Regex
regex = "1"

# Better sync primitives
parking_lot = "0.12"
dashmap = "6"

# Better hashing
ahash = "0.8"

# String optimization
compact_str = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Directory utilities
dirs = "5"

# File locking for multi-instance safety
fs2 = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
